--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.2.0",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -21,7 +22,16 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.2.0",
+    "firebase-tools": "^3.17.6",
+    "font-awesome": "^4.7.0",
+    "g": "^2.0.1",
+    "ng2-table": "^1.3.2",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
